# QTproject

./: README.md
Gestion_de_Departement_GI/: AISD1.txt  AISD2.txt  CMakeLists.txt  CMakeLists.txt.user.93bd7a9  E22.txt  SBD1.txt  SBD2.txt  ad_data.txt  ajouter.h  assets.qrc  cyclemanagement.cpp  cyclemanagement.h  cyclemanagement.ui  database.cpp  database.h  databasemanager.cpp  databasemanager.h  demandswindow.cpp  demandswindow.h  idai_data.txt  licence.cpp  licence.h  licence.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  master.cpp  master.h  mastermanagement.cpp  mastermanagement.h  professorswindow.cpp  professorswindow.h  reservationswindow.cpp  reservationswindow.h  salle.cpp  salle.h  (+6 more)
Gestion_de_Departement_GI/tt/: stage_ad.txt  stage_idai.txt
